--- a/src/styles/Tabla.css
+++ b/src/styles/Tabla.css
@@ -30,3 +30,8 @@ td {
 tbody tr:hover {
     background: rgba(21, 54, 139, 0.2);
 }
+
+button {
+    background-color: rgba(255, 255, 255, 0.1);
+    border: none;
+}
